--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
 	"description": "The Laravel Framework.",
 	"keywords": ["framework", "laravel"],
 	"require": {
-		"laravel/framework": "4.1.*"
+		"laravel/framework": "4.1.*",
+		"way/generators": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
